--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/Utkarsh85/object-traverse-clean/issues"
   },
-  "homepage": "https://github.com/Utkarsh85/object-traverse-clean#readme"
+  "homepage": "https://github.com/Utkarsh85/object-traverse-clean#readme",
+  "devDependencies": {
+    "chai": "^4.1.2"
+  }
 }
